packages/core/src/styles/typography/_typography.scss
// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
// This software is released under MIT license.
// The full license information can be found in LICENSE in the root directory of this project.

@import './../mixins/mixins';

@mixin LHE($lh-gap: 0.5em) {
  @include line-height-eraser(
    $lh-gap,
    $cds-global-typography-top-gap-height,
    $cds-global-typography-ascender-height,
    $cds-global-typography-x-height
  );
}

[cds-text] {
  font-family: $cds-global-typography-font-family;
  margin-top: 0;
  margin-bottom: 0;

  // remove as they cause excess gap when combined with cds-layout on the same element
  &[cds-layout~='vertical'],
  &[cds-layout~='horizontal'],
  &[cds-layout~='grid'] {
    &::before,
    &::after {
      display: none;
    }
  }
}

[cds-text*='display'],
[cds-text*='heading'],
[cds-text*='title'],
[cds-text*='section'],
[cds-text*='subsection'] {
  font-family: $cds-global-typography-header-font-family;
  color: $cds-global-typography-color-400;
}

[cds-text*='body'],
[cds-text*='message'],
[cds-text*='secondary'],
[cds-text*='caption'],
[cds-text*='smallcaption'] {
  color: $cds-global-typography-color-500;
}

[cds-text*='inline'] {
  width: auto !important;
  display: inline-block !important;
}

[cds-text*='display'] {
  $lh-gap: getLineHeightGap(
    $cds-global-typography-display-line-height-static,
    $cds-global-typography-display-line-height
  );
  @include LHE($lh-gap);

  font-size: $cds-global-typography-display-font-size;
  font-weight: $cds-global-typography-display-font-weight;
  line-height: $cds-global-typography-display-line-height;
  letter-spacing: $cds-global-typography-display-letter-spacing;
}

[cds-text*='heading'] {
  $lh-gap: getLineHeightGap(
    $cds-global-typography-heading-line-height-static,
    $cds-global-typography-heading-line-height
  );
  @include LHE($lh-gap);

  font-size: $cds-global-typography-heading-font-size;
  font-weight: $cds-global-typography-heading-font-weight;
  line-height: $cds-global-typography-heading-line-height;
  letter-spacing: $cds-global-typography-heading-letter-spacing;
}

[cds-text*='title'] {
  $lh-gap: getLineHeightGap($cds-global-typography-title-line-height-static, $cds-global-typography-title-line-height);
  @include LHE($lh-gap);

  font-size: $cds-global-typography-title-font-size;
  font-weight: $cds-global-typography-title-font-weight;
  line-height: $cds-global-typography-title-line-height;
  letter-spacing: $cds-global-typography-title-letter-spacing;
}

[cds-text*='section'] {
  $lh-gap: getLineHeightGap(
    $cds-global-typography-section-line-height-static,
    $cds-global-typography-section-line-height
  );
  @include LHE($lh-gap);

  font-size: $cds-global-typography-section-font-size;
  font-weight: $cds-global-typography-section-font-weight;
  line-height: $cds-global-typography-section-line-height;
  letter-spacing: $cds-global-typography-section-letter-spacing;
}

[cds-text*='subsection'] {
  $lh-gap: getLineHeightGap(
    $cds-global-typography-subsection-line-height-static,
    $cds-global-typography-subsection-line-height
  );
  @include LHE($lh-gap);

  font-size: $cds-global-typography-subsection-font-size;
  font-weight: $cds-global-typography-subsection-font-weight;
  line-height: $cds-global-typography-subsection-line-height;
  letter-spacing: $cds-global-typography-subsection-letter-spacing;
}

[cds-text*='body'] {
  $lh-gap: getLineHeightGap($cds-global-typography-body-line-height-static, $cds-global-typography-body-line-height);
  @include line-height-eraser(
    $lh-gap,
    $cds-global-typography-top-gap-height,
    $cds-global-typography-ascender-height,
    $cds-global-typography-x-height,
    0.1em
  );

  font-weight: $cds-global-typography-body-font-weight;
  font-size: $cds-global-typography-body-font-size;
  letter-spacing: $cds-global-typography-body-letter-spacing;
  line-height: $cds-global-typography-body-line-height;
}

[cds-text*='message'] {
  $lh-gap: getLineHeightGap(
    $cds-global-typography-message-line-height-static,
    $cds-global-typography-message-line-height
  );
  @include LHE($lh-gap);

  font-size: $cds-global-typography-message-font-size;
  font-weight: $cds-global-typography-message-font-weight;
  line-height: $cds-global-typography-message-line-height;
  letter-spacing: $cds-global-typography-message-letter-spacing;
}

[cds-text*='secondary'] {
  $lh-gap: getLineHeightGap(
    $cds-global-typography-secondary-line-height-static,
    $cds-global-typography-secondary-line-height
  );
  @include LHE($lh-gap);

  font-size: $cds-global-typography-secondary-font-size;
  font-weight: $cds-global-typography-secondary-font-weight;
  line-height: $cds-global-typography-secondary-line-height;
  letter-spacing: $cds-global-typography-secondary-letter-spacing;
}

[cds-text*='caption'] {
  $lh-gap: getLineHeightGap(
    $cds-global-typography-caption-line-height-static,
    $cds-global-typography-caption-line-height
  );
  @include LHE($lh-gap);

  font-size: $cds-global-typography-caption-font-size;
  font-weight: $cds-global-typography-caption-font-weight;
  line-height: $cds-global-typography-caption-line-height;
  letter-spacing: $cds-global-typography-caption-letter-spacing;
}

[cds-text*='smallcaption'] {
  $lh-gap: getLineHeightGap(
    $cds-global-typography-smallcaption-line-height-static,
    $cds-global-typography-smallcaption-line-height
  );
  @include LHE($lh-gap);

  font-size: $cds-global-typography-smallcaption-font-size;
  font-weight: $cds-global-typography-smallcaption-font-weight;
  line-height: $cds-global-typography-smallcaption-line-height;
  letter-spacing: $cds-global-typography-smallcaption-letter-spacing;
}

[cds-text~='link'] {
  color: $cds-global-typography-link-color !important;
  text-decoration: underline !important;
  line-height: inherit !important;
  font-size: inherit !important;

  &:hover {
    color: $cds-global-typography-link-color-hover !important;
  }

  &:visited:not([cds-text~='static']),
  &[cds-text~='visited'] {
    color: $cds-global-typography-link-color-visited !important;

    &:hover {
      color: $cds-global-typography-link-color-visited-hover !important;
    }
  }
}

[cds-text~='code'] {
  color: $cds-alias-status-danger;
  font-family: monospace;
  font-size: 1.1em;
}

// hr
[cds-divider] {
  display: block;
  height: $cds-alias-object-border-width-100;
  overflow: hidden;
  box-shadow: $cds-alias-object-border-color 0 0 0 $cds-alias-object-border-width-100 inset;
}

// font-weight

[cds-text~='extrabold'] {
  font-weight: $cds-global-typography-font-weight-extrabold !important;
}

[cds-text~='bold'] {
  font-weight: $cds-global-typography-font-weight-bold !important;
}

[cds-text~='semibold'] {
  font-weight: $cds-global-typography-font-weight-semibold !important;
}

[cds-text~='medium'] {
  font-weight: $cds-global-typography-font-weight-medium !important;
}

[cds-text~='regular'] {
  font-weight: $cds-global-typography-font-weight-regular !important;
}

[cds-text~='light'] {
  font-weight: $cds-global-typography-font-weight-light !important;
}

// transforms

[cds-text~='capitalize'] {
  text-transform: capitalize !important;
}

[cds-text~='uppercase'] {
  text-transform: uppercase !important;
}

[cds-text~='lowercase'] {
  text-transform: lowercase !important;
}

// truncation

[cds-text~='truncate'] {
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  white-space: nowrap !important;
}

// alignment

[cds-text~='justify'] {
  text-align: justify !important;
}

[cds-text~='left'] {
  text-align: left !important;
}

[cds-text~='right'] {
  text-align: right !important;
}

[cds-text~='center'] {
  text-align: center !important;
}

// https://seek-oss.github.io/capsize/
[cds-text~='lhe'] {
  /* stylelint-disable-next-line meowtec/no-px */
  padding: 0.05px 0;

  &::before {
    content: '';
    margin-top: -0.124em;
    display: block;
    height: 0;
  }

  &::after {
    content: '';
    margin-bottom: -0.221em;
    display: block;
    height: 0;
  }
}

// remove line-height eraser from element
[cds-text~='disable-lhe'] {
  @include remove-line-height-erasers;
}

